# slowcat

./: .gitignore  CMakeLists.txt  Dockerfile.musl  README.md  build-musl.sh  conanfile.txt  main.cpp
.github/workflows/: build.yml
